# Scientific-Computing

./: README.md
作业/第三次作业/: 第三次作业题目.txt
课件/: 实验1.pptx  实验2.pptx  实验3.pptx  实验4.pptx
部分实验代码及报告/: CMakeLists.txt  MatrixAdd.metal  Timer.cpp  exp1_1.cpp  exp1_2.cpp  exp2_1.cpp  exp2_2.cpp  exp3_CPU.cpp  exp3_Metal.cpp  exp4.cpp  hello_cxx.cc  openmpi_test.cpp  openmpi_test.h  output_0_time10.txt  output_0_time100.txt  output_0_time20.txt  output_0_time30.txt  output_0_time40.txt  output_0_time50.txt  output_0_time60.txt  output_0_time70.txt  output_0_time80.txt  output_0_time90.txt  output_1_time10.txt  output_1_time100.txt  output_1_time20.txt  output_1_time30.txt  output_1_time40.txt  output_1_time50.txt  output_1_time60.txt  output_1_time70.txt  output_1_time80.txt  output_1_time90.txt  output_2_time10.txt  output_2_time100.txt  output_2_time20.txt  output_2_time30.txt  output_2_time40.txt  output_2_time50.txt  output_2_time60.txt  (+33 more)
